import React from 'react';
import renderer from 'react-test-renderer';

import { ThemeProvider } from '@ui/theme';
import TransactionCard from './';

// eslint-disable-next-line
const data = {"scheduledTransactions":[{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c7afcc9a198531f600da6a3cee3d19957","start":"Wed Jan 17 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c526d99425e516edbab13c811336e7e0d","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c7c1a22154b5aec0a8244dde1c1f84cc7","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c01982aa09da7adee4f0af2860d7cba9d","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906cc2c8d1185251fca1270b33de8569bee5","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906cc383b0af126c72efb970f92d1a768bb9","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c363576d51642786da729200a9b0373ce","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c630bc12d2ed369f4a431d8b14065cff7","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906ccb8b6dbe1d00aac4bcef3d1423f0e7d1","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c04622e37843659c3ae5ed49b2ac4b3a2","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c48903e12fb87c34494b6a255235a30b3","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c80ac1816f05e4c308058173aa68e296f","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c589fd516bc033837b9215dd5c147a46f","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c1f443dc822f17d3f9e328d73eb57962e","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906ce945f9a63074b55d6f14d73d39c717c1","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c76a4158105382ca0558a978a01aa1196","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c77ab9de3855c16f97e7ec3926f189e52","start":"Tue Jan 16 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906ce9ca1d5ec3b92ea8f49c30d206b839fe","start":"Mon Jan 15 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c26273ea3350f468e464a8e9ebf892556","start":"Mon Jan 15 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"},{"id":"f0db7e3b0c95948e8fd3a8e9cfe3906c4133785a912ae2b1e38f79990b5191db","start":"Mon Jan 15 2018 16:00:00 GMT-0800 (PST)","details":[{"account":{"name":"General Fund","__typename":"FinancialAccount"},"amount":1,"__typename":"TransactionDetail"}],"transactions":[],"schedule":{"description":"One Time","__typename":"DefinedValue"},"__typename":"ScheduledTransaction"}],"savedPaymentMethods":[{"id":29239,"name":"cc good","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29246,"name":"Bank Account","payment":{"accountNumber":"1xxxx3123","paymentType":"ACH","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29247,"name":"cc2","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29248,"name":"cc3","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29249,"name":"cc3","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29250,"name":"cc30","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29251,"name":"cc31","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29252,"name":"cc expiring","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29253,"name":"cc expiring 2","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"},{"id":29254,"name":"cc expiring 3","payment":{"accountNumber":"411111******1111","paymentType":"Visa","__typename":"PaymentDetail"},"__typename":"SavedPayment"}],"activityItems":[{"id":"01428de2c6ffc1850a90eaa51e840c7551b51ad12d91391f11a44c75022504d8","date":"2018-01-18T15:31:55.427Z","summary":"Reference Number: 3953283923","status":null,"statusMessage":null,"schedule":null,"details":[{"amount":1,"account":{"name":"General Fund","__typename":"FinancialAccount"},"__typename":"TransactionDetail"}],"__typename":"Transaction"},{"id":"01428de2c6ffc1850a90eaa51e840c75089c7a406d3a2f1ae70c0333cb815017","date":"2018-01-18T15:30:55.427Z","summary":"Reference Number: 3953281911","status":null,"statusMessage":null,"schedule":null,"details":[{"amount":1,"account":{"name":"General Fund","__typename":"FinancialAccount"},"__typename":"TransactionDetail"}],"__typename":"Transaction"},{"id":"01428de2c6ffc1850a90eaa51e840c75032f5d31e11720c2c10debdd45044bf3","date":"Wed Jan 17 2018 10:11:07 GMT-0800 (PST)","summary":"Reference Number: 3952129674","status":null,"statusMessage":null,"schedule":null,"details":[{"amount":1,"account":{"name":"General Fund","__typename":"FinancialAccount"},"__typename":"TransactionDetail"}],"__typename":"Transaction"},{"name":"cc expiring","expirationYear":"18","expirationMonth":"02","__typename":"SavedPayment"},{"name":"cc expiring 3","expirationYear":"18","expirationMonth":"02","__typename":"SavedPayment"}]};

describe('the TransactionCard component', () => {
  it('should render Success', () => {
    const tree = renderer.create(
      <ThemeProvider>
        <TransactionCard
          date="02/02/2020"
          iconSize={20}
          dateFormat="lll"
          status="Success"
          details={data.scheduledTransactions[0].details}
          isScheduled
        />
      </ThemeProvider>,
    );
    expect(tree).toMatchSnapshot();
  });
  it('should render Failure', () => {
    const tree = renderer.create(
      <ThemeProvider>
        <TransactionCard
          date="02/02/2020"
          iconSize={20}
          dateFormat="lll"
          status="Failed"
          details={data.scheduledTransactions[0].details}
          error="Unable to process transaction"
        />
      </ThemeProvider>,
    );
    expect(tree).toMatchSnapshot();
  });
  it('should render scheduled payments', () => {
    const tree = renderer.create(
      <ThemeProvider>
        <TransactionCard
          date="02/02/2020"
          iconSize={20}
          dateFormat="lll"
          status="Pending"
          details={data.scheduledTransactions[0].details}
          isScheduled
        />
      </ThemeProvider>,
    );
    expect(tree).toMatchSnapshot();
  });
});

